# lutum

./: .gitignore  AGENTS.md  Cargo.toml  Eure.eure  LICENSE-APACHE  LICENSE-MIT  README.md
agents-macros/: Cargo.toml
crates/agents/: Cargo.toml
crates/agents-claude/: Cargo.toml
crates/agents-claude/examples/: ollama_transcript.rs
crates/agents-claude/src/: adapter.rs  lib.rs  sse.rs
crates/agents-claude/src/messages/: content.rs  mod.rs  request.rs  response.rs  tool.rs  turn.rs
crates/agents-openai/: Cargo.toml
crates/agents-openai/examples/: ollama_transcript.rs
crates/agents-openai/src/: adapter.rs  lib.rs  openai.rs
crates/agents-openai/src/completion/: request.rs
crates/agents-openai/src/responses/: input.rs  mod.rs  output.rs  request.rs  tool.rs  turn.rs
crates/agents/examples/: context_direct_control.rs  greeting.rs  parallel_tools.rs  single_tool_roundtrip.rs  structured_extract.rs  text_minimal.rs  text_session.rs
crates/agents/src/: context.rs  lib.rs  mock.rs  session.rs
crates/agents/tests/: selector_compile_fail.rs  session_api.rs  session_context_flows.rs  structured_completion.rs  tool_macros.rs  turn_collection.rs  typed_api.rs
crates/agents/tests/ui/: mixed_selectors.rs
crates/lutum/: Cargo.toml
crates/lutum-adapter-smoke/: Cargo.toml
crates/lutum-adapter-smoke/src/: main.rs
crates/lutum-claude/: Cargo.toml
crates/lutum-claude/examples/: claude_ollama_transcript.rs  ollama_claude_transcript.rs  ollama_transcript.rs
crates/lutum-claude/src/: adapter.rs  error.rs  lib.rs  persistence.rs
crates/lutum-claude/src/messages/: content.rs  mod.rs  request.rs  response.rs  tool.rs  turn.rs
crates/lutum-claude/tests/: prompt_caching.rs
crates/lutum-eval/: Cargo.toml
crates/lutum-eval-runner/: Cargo.toml
crates/lutum-eval-runner/src/: lib.rs
crates/lutum-eval/src/: combinators.rs  judge.rs  lib.rs  macros.rs  objective.rs  probe.rs  record.rs  score.rs
crates/lutum-eval/tests/: combinators.rs  errors.rs  judge.rs  metric.rs  probe.rs
crates/lutum-macros/: Cargo.toml
crates/lutum-macros/src/: args.rs  hook.rs  lib.rs  tool_fn.rs  tool_input.rs  toolset.rs  utils.rs
crates/lutum-macros/src/hook/: def_global.rs  def_local.rs  def_shared.rs  hook.rs  hooks.rs  impl_hooks.rs
crates/lutum-openai/: Cargo.toml
crates/lutum-openai/examples/: ollama_transcript.rs
crates/lutum-openai/src/: adapter.rs  error.rs  lib.rs  sse.rs
crates/lutum-openai/src/chat/: message.rs  mod.rs  output.rs  request.rs  tool.rs
crates/lutum-openai/src/completion/: mod.rs  request.rs
crates/lutum-openai/src/responses/: input.rs  mod.rs  output.rs  request.rs  tool.rs  turn.rs
crates/lutum-openai/tests/: prompt_caching.rs
crates/lutum-openrouter/: Cargo.toml
crates/lutum-openrouter/src/: lib.rs
crates/lutum-protocol/: Cargo.toml
crates/lutum-protocol/src/: budget.rs  conversation.rs  error.rs  extensions.rs  hooks.rs  lib.rs  llm.rs  reducer.rs  telemetry.rs  toolset.rs  transcript.rs
crates/lutum-trace/: Cargo.toml
crates/lutum-trace/src/: error.rs  filter.rs  layer.rs  lib.rs  raw.rs  snapshot.rs  store.rs  subscriber.rs  test.rs
crates/lutum-trace/tests/: collector.rs
crates/lutum/examples/: architectural_constraints.rs  borrowed_hooks.rs  call_budget.rs  chain_hooks.rs  completion.rs  contract_first_turn.rs  deterministic_hooks.rs  entropy_gc.rs  eval_raw_debug_dump.rs  failure_taxonomy_recovery.rs  hook_cross_module_paths.rs  memory_surface.rs  multi_candidate.rs  nested_toolset.rs  planner_generator_evaluator.rs  policy_hook.rs  rag.rs  react_loop.rs  react_loop_direct.rs  reflexion.rs  repo_ssot.rs  skill.rs  stage_loop.rs  stateful_hook.rs  streaming_turn_ui.rs  tool_hook.rs  tool_validation_hooks.rs  trace_dump.rs  user_approval_hook.rs  verification_gates.rs
crates/lutum/src/: agent_loop.rs  builders.rs  context.rs  hooks.rs  lib.rs  mock.rs  session.rs
crates/lutum/tests/: hook_def_macros.rs  hooks.rs  nested_toolset.rs  raw_trace.rs  retry.rs  session_api.rs  session_context_flows.rs  structured_completion.rs  tool_description.rs  tool_hooks.rs  tool_macros.rs  turn_collection.rs  typed_api.rs
crates/lutum/tests/ui/: hook_cross_module_output_paths.rs  hook_cross_module_paths.rs  hook_def_aggregate_finalize.rs  hook_def_aggregate_finalize.stderr  hook_def_chain.rs  hook_def_chain_last.rs  hook_def_chain_last.stderr  hook_def_generics.rs  hook_def_generics.stderr  hook_def_mismatched_field_name.rs  hook_def_mismatched_field_name.stderr  hook_def_optional_last.rs  hook_def_output.rs  hook_def_output_without_companion.rs  hook_def_output_without_companion.stderr  hook_def_output_wrong_trait.rs  hook_def_output_wrong_trait.stderr  hook_def_singleton_chain.rs  hook_def_singleton_chain.stderr  hook_def_singleton_last.rs  hook_def_singleton_last.stderr  hook_def_singleton_output.rs  hook_def_singleton_output.stderr  hook_impl_chain_last.rs  hook_impl_chain_last.stderr  hook_impl_imported_slot_without_companion_items.rs  hook_impl_imported_slot_without_companion_items.stderr  hook_impl_path_chain.rs  hook_impl_path_chain_last.rs  hook_impl_path_chain_last.stderr  hook_impl_singleton_last.rs  hook_impl_singleton_last.stderr  hooks_path_slot.rs  hooks_path_slot.stderr  impl_hooks_basic.rs  impl_hooks_last_not_trailing.rs  impl_hooks_last_not_trailing.stderr  impl_hooks_mismatched_signature.rs  impl_hooks_mismatched_signature.stderr  impl_hooks_toolset.rs  (+9 more)
data/: adapter-smoke-config.eure
demo-apps/sqlite/agent/: Cargo.toml
demo-apps/sqlite/agent/src/: hooks.rs  lib.rs  loop.rs  tools.rs
demo-apps/sqlite/agent/src/db/: executor.rs  mod.rs  validator.rs
demo-apps/sqlite/eval/: .gitignore  Cargo.toml  agent.db  cases.toml
demo-apps/sqlite/eval/src/: cases.rs  main.rs  runner.rs
demo-apps/sqlite/eval/src/evaluators/: case.rs  consistency.rs  mod.rs  sql_syntax.rs  table_scan.rs
demo-apps/sqlite/tui/: Cargo.toml
demo-apps/sqlite/tui/src/: app.rs  hooks.rs  main.rs  registry_persistence.rs  ui.rs
docs/: DESIGN-v2.md  DESIGN.md  _nav.eure  adapters.eure  concepts.eure  eval.eure  (+7 more)
docs-site/: Cargo.toml
(+28 files in other folders)
