[workspace]
members = [
    "crates/lutum", "crates/lutum-claude",
    "crates/lutum-macros",
    "crates/lutum-openai",
    "crates/lutum-openrouter",
    "crates/lutum-protocol",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
lutum-claude = { path = "crates/lutum-claude" }
lutum-macros = { path = "crates/lutum-macros" }
lutum-openai = { path = "crates/lutum-openai" }
lutum-openrouter = { path = "crates/lutum-openrouter" }
lutum-protocol = { path = "crates/lutum-protocol" }
async-stream = "0.3"
async-trait = "0.1.89"
bon = "3"
bytes = "1"
console = "0.15"
futures = "0.3"
heck = "0.5"
proc-macro2 = "1"
quote = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
syn = { version = "2", features = ["full", "extra-traits"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
monostate = "1.0"
