[package]
name = "agents-claude"
version.workspace = true
edition.workspace = true

[dependencies]
agents-protocol.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
