[package]
name = "lutum-claude"
version.workspace = true
edition.workspace = true
description = "Anthropic Claude Messages API adapter for lutum"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["llm", "ai", "claude", "anthropic"]

[dependencies]
lutum.workspace = true
lutum-macros.workspace = true
lutum-protocol.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow = "1"
console.workspace = true
futures.workspace = true
lutum-trace.workspace = true
tokio.workspace = true
