[package]
name = "lutum-eval"
version.workspace = true
edition.workspace = true
description = "Eval core for observing and scoring trace + artifact pairs"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["llm", "ai", "evaluation", "tracing"]

[dependencies]
async-trait.workspace = true
lutum.workspace = true
lutum-trace.workspace = true
thiserror.workspace = true
paste.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lutum-protocol.workspace = true
schemars.workspace = true
serde.workspace = true
