[package]
name = "lutum-openai"
version.workspace = true
edition.workspace = true
description = "OpenAI Responses API adapter for lutum"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["llm", "ai", "openai", "streaming"]

[dependencies]
lutum-macros.workspace = true
lutum-protocol.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
monostate.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow = "1"
console.workspace = true
futures.workspace = true
tokio.workspace = true
