[package]
name = "lutum-openrouter"
version.workspace = true
edition.workspace = true

[dependencies]
lutum-protocol = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
