[package]
name = "lutum-openrouter"
version.workspace = true
edition.workspace = true
description = "OpenRouter adapter for lutum"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["llm", "ai", "openrouter"]

[dependencies]
lutum-protocol = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
