[package]
name = "lutum-protocol"
version.workspace = true
edition.workspace = true
description = "Core traits and request/response types for lutum"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["llm", "ai", "protocol", "streaming"]

[dependencies]
async-trait.workspace = true
bon.workspace = true
futures.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
send_wrapper = { version = "0.6", features = ["futures"] }
