[package]
name = "lutum-trace"
version.workspace = true
edition.workspace = true
description = "Scoped in-memory tracing layer for span/event collection and testing"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "trace",
    "testing",
] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry = { version = "0.32.1", default-features = false }
tracing-subscriber = { workspace = true, features = ["std"] }
