[package]
name = "lutum"
version.workspace = true
edition.workspace = true
description = "A composable LLM toolkit for advanced orchestration"
readme = "../../README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["llm", "ai", "orchestration", "streaming"]

[features]
default = []
claude = ["dep:lutum-claude"]
openai = ["dep:lutum-openai"]

[dependencies]
lutum-claude = { workspace = true, optional = true }
lutum-macros.workspace = true
lutum-openai = { workspace = true, optional = true }
lutum-protocol.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
trybuild = "1"
