[package]
name = "lutum"
version.workspace = true
edition.workspace = true
description = "A composable LLM toolkit for advanced orchestration"
readme = "../../README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["llm", "ai", "orchestration", "streaming"]

[features]
default = []

[dependencies]
lutum-macros.workspace = true
lutum-protocol.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow = "1"
console.workspace = true
futures.workspace = true
lutum-trace.workspace = true
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
trybuild = "1"
# for examples
lutum-openai.workspace = true

[[example]]
name = "contract_first_turn"

[[example]]
name = "stage_loop"

[[example]]
name = "verification_gates"

[[example]]
name = "streaming_turn_ui"

[[example]]
name = "planner_generator_evaluator"

[[example]]
name = "reflexion"

[[example]]
name = "failure_taxonomy_recovery"

[[example]]
name = "multi_candidate"

[[example]]
name = "react_loop"

[[example]]
name = "memory_surface"

[[example]]
name = "rag"

[[example]]
name = "repo_ssot"

[[example]]
name = "deterministic_hooks"

[[example]]
name = "policy_hook"

[[example]]
name = "stateful_hook"

[[example]]
name = "architectural_constraints"

[[example]]
name = "entropy_gc"

[[example]]
name = "user_approval_hook"

[[example]]
name = "call_budget"

[[example]]
name = "completion"

[[example]]
name = "trace_dump"
