[package]
name = "sqlite-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "sqlite_agent"

[dependencies]
lutum          = { workspace = true }
lutum-protocol = { workspace = true }
lutum-claude   = { workspace = true }
rusqlite    = { version = "0.32", features = ["bundled"] }
sqlparser   = "0.55"
serde       = { workspace = true }
serde_json  = { workspace = true }
schemars    = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true, features = ["sync", "rt-multi-thread"] }
tracing     = { workspace = true }
