[package]
name = "sqlite-agent-eval"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sqlite-agent-eval"
path = "src/main.rs"

[dependencies]
sqlite-agent = { path = "../agent" }
lutum        = { workspace = true }
lutum-eval   = { workspace = true }
lutum-claude = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
schemars     = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
anyhow       = "1"
toml         = "0.8"
clap         = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
lutum-trace = { workspace = true }
