[package]
name = "sqlite-agent-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sqlite-agent-tui"
path = "src/main.rs"

[dependencies]
sqlite-agent = { path = "../agent" }
lutum        = { workspace = true }
lutum-claude = { workspace = true }
ratatui      = "0.29"
tui-textarea = "0.7"
crossterm    = "0.28"
tokio        = { workspace = true, features = ["sync", "rt-multi-thread"] }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
anyhow       = "1"
clap         = { version = "4", features = ["derive", "env"] }
